--- a/app/sass/_3_location/_media_3.sass
+++ b/app/sass/_3_location/_media_3.sass
@@ -31,3 +31,20 @@
           max-width: 100%
           max-height: initial
           height: initial
+
+@include media_tablet-mobile
+  main
+    section._3_location
+      .container
+        padding: 0
+
+        .location__content
+          padding: 0 20px
+
+        .location__map-box
+          max-width: 100%
+          width: 100%
+
+          img.location__map__img
+            max-width: 100%
+            width: 100%
