--- a/app/sass/_nullstyle.sass
+++ b/app/sass/_nullstyle.sass
@@ -49,6 +49,10 @@ textarea
 input::-ms-clear
    display: none
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button
+   -webkit-appearance: none
+
 button
    cursor: pointer
 
