--- a/app/sass/_5_why-nura/_media_5.sass
+++ b/app/sass/_5_why-nura/_media_5.sass
@@ -41,8 +41,14 @@
       padding: 20px 0 40px 0
 
       .container
+        padding: 0
+
+        h2
+          margin-left: 20px
+
         .why-nura__content-box
           .why-nura__content-box__inner
+            padding: 0 20px
             display: initial
 
             ul
